<resources>
    <string name="app_name" translatable="false">InStyle</string>
    <string name="facebook_application_id">392827217865642</string>
    <string name="facebook_login_protocol_scheme">fb392827217865642</string>
    <string name="twitter_consumer_key" translatable="false">OkYwa2sAT9SFs9ClO6IBNIjNo</string>
    <string name="twitter_consumer_secret" translatable="false">u5jfBNrPbc9lyc8wXKj0rCoOPSGFz4cL8F2njtbW24PHjxQ9sl
</string>
    <string name="action_settings">Settings</string>
    <string name="no_network_or_rest_api_chosen_string">Error! Please check that you are connected to network and at least one entertainment source is chosen!</string>
    <string name="placeholder">placeholder</string>
    <string name="no_deals_available_string">No deals available. Please come back later!</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="sign_out">Sign Out</string>
    <string name="my_photos">My Photos</string>
    <string name="title_activity_photo_upload">Upload Photo</string>
    <string name="user_photo">User Photo</string>
    <string name="submit">Submit</string>
    <string name="add_photo">Add Photo</string>
    <string name="refresh">Refresh</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="refresh_title">Click the refresh button to load new photos.</string>
    <string name="refresh_title_2">Click the refresh button to reload photos</string>
    <string name="retake_photo">Retake Photo</string>
    <string name="return_home">Return Home</string>
    <string name="share_text">Check out this awesome image from </string>
    <string name="favorites">Add to Favorites</string>
    <string name="no_image_title">Looks like there are no images in this category.
        Click on the camera button to add a image in this category.</string>
    <string name="no_image_title_2">Looks like you haven\'t liked any photos.
        Go to the home screen and see if there is anything you like.</string>
    <string name="no_image_title_3">Looks like this user has not uploaded any photos.</string>
    <string name="no_image_title_4">Looks like this user isn\'t following anybody.</string>
    <string name="no_image_title_5">Looks like this user doesn\'t like any photos.</string>
    <string name="no_image_title_6">Looks like there no more photos. Come back to this category
        later.</string>
    <string name="no_image_title_7">Looks like you haven\'t liked any photos.</string>
    <string name="no_image_title_8">Looks like you aren\'t following anybody.</string>
    <string name="no_image_title_9">You have no Photos. :(</string>
    <string name="no_image_title_10">Looks like you haven\'t added any photos to favorites.</string>
    <string name="title_activity_my_photos">My Photos</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_contact_us">Contact Us</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_likes">Likes</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="success_title">Success!</string>
    <string name="success_message">Your photo is uploaded. </string>
    <string name="failure_title">Oh no!</string>
    <string name="failure_message">Your occasion photo failed to upload. </string>
    <string name="dialog_main_message"> If you wish to take another Photo then please click cancel
        else if you wish to return home then please click return home.</string>
    <string name="occasion_for_outfit">Occasion for outfit</string>
    <string name="uploading">Uploading</string>
    <string name="upload_failed_error_string">Uh-Oh! Upload failed, please try again later!</string>
    <string name="signing_out">Signing out</string>
    <string name="upload_success">Upload success!</string>
    <string name="sending_failed">Sending failed</string>
    <string name="occasion_cannot_be_empty_string">Occasion can not be empty</string>
    <string name="title_activity_zoom_photo">Zoom</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_comment">Comment</string>
    <string name="sign_out_title">Are you sure you want sign out?</string>
    <string name="confirm">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_photos">My Photos</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_help">Help</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_likes">Likes</string>
    <string name="nav_favorites">Favorites</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>My Photos</item>
        <item>Notifications</item>
    </string-array>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="submenu_title_other">Other</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_take_photo">Take Photo</string>
    <string name="action_spinner">Spinner</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete_photo">Delete Photo</string>
    <string name="action_edit_photo">Edit Photo</string>
    <string name="action_report">Report</string>
    <string name="action_share">Share</string>
    <string name="action_comment">Comment</string>
    <string name="dislike">Dislike</string>
    <string name="like">like</string>
    <string name="picture">Picture</string>
    <string name="expand_picture">Expand Picture</string>
    <string name="comments">Comments</string>
    <string name="picture_options">Picture Options</string>
    <string name="rating_bar">Rating</string>
    <string name="next">NEXT</string>
    <string name="help_slide_1_title">Swiping Left or Right</string>
    <string name="help_slide_1_desc">Swiping right allows you to like the photo. Likewise,
        swiping left allows you to dislike the photo. Note, you can not like or dislike your own
        photos.</string>
    <string name="help_slide_2_title">Reporting</string>
    <string name="help_slide_2_desc">If you happen to find a photo that offends or violates our
        terms of services: Click the report button and the photo will be reported and skipped so
        you can continue voting on other photos.</string>
    <string name="help_slide_3_title">Add Your Own Photo</string>
    <string name="help_slide_3_desc">Don\'t just like or dislike photos from others. Add your own
        to be voted on. Remember that each time you vote on a picture equals more photos you can
        upload.</string>
    <string name="help_slide_4_title">Remember To Have Fun!</string>
    <string name="help_slide_4_desc">Just don\'t think of this app as a competition app. </string>
    <string name="about_desc_1">Our Mission\n\n
        We are independent developers who love fashion and seek to bring the love of fashion to everyone.</string>
    <string name="about_desc_2">Developers\n\n
        Tal Charnes\n
        Khuram Chaudhry\n
        Mario(marzinx3)</string>
    <string name="about_desc_3">Credits\n\n
        Google for the Google Libraries used\n
        Janishar Ali for the PlaceHolder Library\n
        Ben Manes for the Dependency Updates library\n
        Ravi Tamada from AndroidHive\n
        Zetra(zetbaitsu) for the Compressor Library\n
        Bump Technologies for the Glide Library\n
        Chris Banes for the PhotoView Library\n
        Ivan Arcuschin for the SimpleRatingBar Library\n
        Icons from https://icons8.com/\n
        Tango Agency for the Avatar View Library\n
        Jacek for the EasyImage Library\n
        Devlight for the InfiniteCycleViewPager Library\n
        Something LLC. All rights reserved.</string>
    <string name="report">report</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="admob_app_id">ca-app-pub-9373264602198577~6784941722</string>
    <string name="admob_native_ad_unit_id">ca-app-pub-9373264602198577/8323408198</string>
    <string name="admob_Interstitial_Ad_Unit_ID">ca-app-pub-9373264602198577/1263889831</string>
    <string name="admob_banner_Ad_Unit_ID">ca-app-pub-9373264602198577/5056451729</string>
    <string name="you_have_no_new_notifications">You have no new notifications</string>
    <string name="enter_your_message_here_we_are_excited_to_receive_it">Enter your message here. We are excited to receive it!</string>
    <string name="message_empty_error">Message can not be empty</string>
    <string name="select">Select</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="comment_empty_error">Comment can not be empty</string>
    <string name="comment_too_short_error">Comment must be longer than 5 characters</string>
    <string name="share_photo">share_photo</string>
    <string name="anonymous_user">Anonymous User</string>
    <string name="text_home">Home</string>
    <string name="text_trending">Trending</string>
    <string name="text_deals">Deals</string>
    <string name="text_following">Following</string>
    <string name="text_other">Other</string>
    <string name="description_submit_comment">Submit Comment</string>
    <string name="nav_my_profile">My Profile</string>
    <string-array name="spinner_list_item_array">
        <item>All</item>
        <item>Casual</item>
        <item>Business Casual</item>
        <item>Wedding</item>
        <item>Formal</item>
        <item>Dance</item>
        <item>Party</item>
        <item>Work</item>
        <item>Business</item>
        <item>Sports</item>
        <item>Religious</item>
        <item>Concert</item>
        <item>Other</item>
    </string-array>
    <string name="permission_location_rationale">We need your general location to provide you with the closets deals!</string>
    <string name="permission_Location_denied">Location has been turned off deals will not show up.</string>
    <string name="permission_camera_neverask">You can turn location on in the settings of your phone for this app to view deals.</string>
    <string name="location_settings">Location Settings</string>
    <string name="distance">Select the unit and how far you would like to see deals!</string>
    <string name="deals_option">Deals Options</string>
    <string name="Km">Km</string>
    <string name="Mi">Mi</string>
    <string name="save">Save</string>
    <string name="metric_text">Choose the metric for the distance </string>
    <string name="distance_text">Maximum Distance! </string>
</resources>