<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/tab_home"
    android:enabled="true"
    android:icon="@drawable/ic_home_white_24dp"
    android:title="@string/text_home"
    app:showAsAction="always" />
<item
    android:id="@+id/tab_trending"
    android:enabled="true"
    android:icon="@drawable/ic_trending_up_white_24dp"
    android:title="@string/text_trending"
    app:showAsAction="always" />
<item
    android:id="@+id/tab_deals"
    android:enabled="true"
    android:icon="@drawable/ic_shopping_cart_white_24dp"
    android:title="@string/text_deals"
    app:showAsAction="always" />
<item
    android:id="@+id/tab_following"
    android:enabled="true"
    android:icon="@drawable/ic_group_white_24dp"
    android:title="@string/text_following"
    app:showAsAction="always" />
<item
    android:id="@+id/tab_other"
    android:enabled="true"
    android:icon="@drawable/ic_settings_white_24dp"
    android:title="@string/text_other"
    app:showAsAction="always" />
</menu>