<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_report_photo"
        android:orderInCategory="99"
        android:title="@string/action_report"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_favorite_photo"
        android:orderInCategory="99"
        android:title="@string/favorites"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share_photo"
        android:orderInCategory="99"
        android:title="@string/action_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_comment_photo"
        android:orderInCategory="99"
        android:title="@string/action_comment"
        app:showAsAction="never" />


</menu>
