<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c1dff2"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/subject"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/contact_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/message"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/contact_us_message_editText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:hint="@string/enter_your_message_here_we_are_excited_to_receive_it" />

    <Button
        android:id="@+id/submit_contact_us_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit" />
</LinearLayout>