<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metric_text"
        android:fontFamily="serif"
        android:textSize="20sp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/checkbox_Km"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:text="@string/Km"/>

        <CheckBox
            android:id="@+id/checkbox_Mi"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:text="@string/Mi"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance_text"
        android:fontFamily="serif"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/radius_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:textSize="20sp"
        android:layout_gravity="end" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/radius_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>